--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.3.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "mongoose-sequence": "^6.0.1",
     "uuid": "^10.0.0"
